examples/07-downloads-deployment-mine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-console
  name: downloads
spec:
  # just get it out of the way, we don't need extra pods
  # in the namespace when we are debuggging the console
  replicas: 0
  selector:
    matchLabels:
      app: console
      component: downloads
  template:
    metadata:
      name: downloads
      labels:
        app: console
        component: downloads
    spec:
      tolerations:
      - operator: Exists
      containers:
      - name: download-server
        image: docker.io/openshift/origin-cli:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        command: ["/bin/sh"]
        args:
        - '-c'
        - |
          [...]
