examples/07-operator-got-from-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"console-operator","namespace":"openshift-console-operator"},"spec":{"replicas":1,"selector":{"matchLabels":{"name":"console-operator"}},"template":{"metadata":{"labels":{"name":"console-operator"}},"spec":{"containers":[{"args":["-v=4","--create-default-console=true","--config=/var/run/configmaps/config/controller-config.yaml"],"command":["console","operator"],"env":[{"name":"IMAGE","value":"docker.io/openshif [...]
  creationTimestamp: 2019-02-12T20:49:42Z
  generation: 3
  name: console-operator
  namespace: openshift-console-operator
  resourceVersion: "624854"
  selfLink: /apis/extensions/v1beta1/namespaces/openshift-console-operator/deployments/console-operator
  uid: b8fe1de8-2f07-11e9-bac5-0645e6007aca
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: console-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: console-operator
    spec:
      containers:
      - args:
        - -v=4
        - --create-default-console=true
        - --config=/var/run/configmaps/config/controller-config.yaml
        command:
        - console
        - operator
        image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:30a4809452dfdc575b76e34c9f47c463f3e28f5c12b5366712d734c9ba5c579e
        imagePullPolicy: Always
        name: console-operator
        ports:
        - containerPort: 60000
          name: metrics
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/configmaps/config
          name: config
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/master: ""
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: console-operator
      serviceAccountName: console-operator
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          name: console-operator-config
        name: config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-02-12T20:49:56Z
    lastUpdateTime: 2019-02-12T20:49:56Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-02-12T20:49:42Z
    lastUpdateTime: 2019-02-12T20:52:46Z
    message: ReplicaSet "console-operator-5c69cc6f87" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
