examples/cvo-scale-down.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cluster-version-operator
  namespace: openshift-cluster-version
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: cluster-version-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: cluster-version-operator
      name: cluster-version-operator
    spec:
      containers:
      - args:
        - start
        - --release-image=registry.svc.ci.openshift.org/openshift/origin-release@sha256:73c25681fed7403100a685b57c87acf0645df40075afbb5a436c514176d760bf
        - --enable-auto-update=false
        - --v=4
        image: registry.svc.ci.openshift.org/openshift/origin-release@sha256:73c25681fed7403100a685b57c87acf0645df40075afbb5a436c514176d760bf
        imagePullPolicy: Always
        name: cluster-version-operator
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/ssl/certs
          name: etc-ssl-certs
          readOnly: true
        - mountPath: /etc/cvo/updatepayloads
          name: etc-cvo-updatepayloads
          readOnly: true
      dnsPolicy: ClusterFirst
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - operator: Exists
      volumes:
      - hostPath:
          path: /etc/ssl/certs
          type: ""
        name: etc-ssl-certs
      - hostPath:
          path: /etc/cvo/updatepayloads
          type: ""
        name: etc-cvo-updatepayloads
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: 2019-02-18T19:56:43Z
    lastUpdateTime: 2019-02-18T19:56:58Z
    message: ReplicaSet "cluster-version-operator-7f7c574c4b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2019-02-18T21:18:02Z
    lastUpdateTime: 2019-02-18T21:18:02Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
