examples/console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: console
  name: console-fake-extra-route-to-ignore
  namespace: openshift-console
spec:
  host: console-openshift-console.apps.bpeterse2019feb18.devcluster.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None
